syntax = "proto3";

option csharp_namespace = "Bookings.Contracts";

package bookings;

service BookingsContract {
  rpc GetBookings (BookingsRequest) returns (BookingsResponse);
}

message BookingsRequest {
  string id = 1;
  int32 page = 2;
  int32 count = 3;
}

message BookingsResponse {
    repeated BookingItem bookings = 1;
}
message BookingItem {
  string id = 1;
  string hotelId = 2;
  string guestName = 3;
  double price = 4;
  string category = 5;
  string roomId = 6;
  string guestEmail = 7;
  string checkInDate = 8;
  string checkOutDate = 9;
  string createdAt = 10;
  string updatedAt = 11;
  string status = 12;
  int32 adults = 13;
  int32 kids = 14;
  string stateId = 15;
}
